--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="interface"><!--para limitar as laterias do site-->
             <div class="logo">
                 <a href="#">
-                    <img src="images/3.png" alt="Logo Brito">
+                    <img src="images/6.png" alt="Logo Brito">
                 </a>
             </div><!--logo-->
             
@@ -25,8 +25,8 @@
                 <ul>
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Sobre mim</a></li>
-                    <li><a href="#">Projetos</a></li>
                     <li><a href="#">Habilidades</a></li>
+                    <li><a href="#">Projetos</a></li>
                 </ul>
             </nav>
 
@@ -44,17 +44,38 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-                        <h1></h1>
+                        <h1>Olá, eu sou <span>José Brito ^-^</span></h1>
+
+                        <p>Estou em busca de mudar o meu mundo e das pessoas que amo.</p>
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Dowload CV</button>
+                            </a>
+                        </div>
                     </div><!--txt-topo-site-->
 
-                    <div class="img.topo-site">
-                        
+                    <div class="img-topo-site">
+                        <img src="images/pessoa.png" alt="Apenas eu">
                     </div><!--img.topo-site-->
                 </div> <!--flex-->
             </div><!--interface-->
         </section> <!--topo-site-->
     </main>
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="images/foto.png" alt="eu">
+                    </div><!--img-sobre-->
 
+                    <div class="txt-sobre">
+                        <h2>Muito Prazer, <span>sou José Brito.</span></h2>
+                        <p></p>
+
+                    </div><!--txt-sobre-->
+                </div><!--flex-->
+            </div> <!--interface-->
+        </section> <!--sobre-->
 
 </body>
 </html>
