--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div><!--txt-topo-site-->
 
                     <div class="img-topo-site">
-                        <img src="images/pessoa.png" alt="Apenas eu">
+                        <img src="images/3.png" alt="Apenas eu">
                     </div><!--img.topo-site-->
                 </div> <!--flex-->
             </div><!--interface-->
@@ -65,7 +65,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="images/foto.png" alt="eu">
+                        <img src="images/Design sem nome.png" alt="eu">
                     </div><!--img-sobre-->
 
                     <div class="txt-sobre">
