--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="images/Design sem nome.png" alt="eu">
+                        <img src="images/eu_sobre.png" alt="eu">
                     </div><!--img-sobre-->
 
                     <div class="txt-sobre">
