Ajustes de imagens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="interface"><!--para limitar as laterias do site-->
             <div class="logo">
                 <a href="#">
-                    <img src="images/6.png" alt="Logo Brito">
+                    <img src="images/logo.png" alt="Logo Brito">
                 </a>
             </div><!--logo-->
             
@@ -55,7 +55,8 @@
                     </div><!--txt-topo-site-->
 
                     <div class="img-topo-site">
-                        <img src="images/3.png" alt="Apenas eu">
+                        <a href="https://storyset.com/work"></a>
+                        <img src="images/tp2.png" alt="Apenas eu">
                     </div><!--img.topo-site-->
                 </div> <!--flex-->
             </div><!--interface-->
@@ -65,13 +66,14 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="images/eu_sobre.png" alt="eu">
-                    </div><!--img-sobre-->
-
+                        <img src="images/eu_topo.png" alt="eu">
+                    </div>
                     <div class="txt-sobre">
+                        <h2 class="text-small">Um pouco sobre mim</h2>
                         <h2>Muito Prazer, <span>sou José Brito.</span></h2>
-                        <p></p>
-
+                        <p>Sou graduando em Licenciatura em Computação pela Universidade do Estado do Amazonas, ainda estou me encontrando nesse vasto mundo do desenvolvimento, mas estou no caminho para me tornar um desenvolvedor Full Stack.</p>
+                        <p>Tenho um grande atrativo pela área de engenharia de software, design e ciência de dados. </p>   
+                        <p>Atualmante faço estágio onde desenvolvo soluções utilizando Postgresql, Python, Power Bi, Linux e Dbeaver.</p>   
                     </div><!--txt-sobre-->
                 </div><!--flex-->
             </div> <!--interface-->
