--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="img-topo-site">
                         <a href="https://storyset.com/work"></a>
-                        <img src="images/tp2.png" alt="Apenas eu">
+                        <img src="images/tp2.png" alt="https://storyset.com/work">
                     </div><!--img.topo-site-->
                 </div> <!--flex-->
             </div><!--interface-->
@@ -69,11 +69,10 @@
                         <img src="images/eu_topo.png" alt="eu">
                     </div>
                     <div class="txt-sobre">
-                        <h2 class="text-small">Um pouco sobre mim</h2>
+                        <h1>Um pouco sobre mim</h1>
                         <h2>Muito Prazer, <span>sou José Brito.</span></h2>
                         <p>Sou graduando em Licenciatura em Computação pela Universidade do Estado do Amazonas, ainda estou me encontrando nesse vasto mundo do desenvolvimento, mas estou no caminho para me tornar um desenvolvedor Full Stack.</p>
-                        <p>Tenho um grande atrativo pela área de engenharia de software, design e ciência de dados. </p>   
-                        <p>Atualmante faço estágio onde desenvolvo soluções utilizando Postgresql, Python, Power Bi, Linux e Dbeaver.</p>   
+                        <p>Tenho um grande atrativo pela área de engenharia de software, design e ciência de dados. Atualmante faço estágio onde desenvolvo soluções utilizando Postgresql, Python, Power Bi, Linux e Dbeaver.</p>   
                     </div><!--txt-sobre-->
                 </div><!--flex-->
             </div> <!--interface-->
