--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
     <!-- Fim google fonts -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>Portifolio</title>
 </head>
@@ -50,6 +51,14 @@
                         <div class="btn-contato">
                             <a href="#">
                                 <button>Dowload CV</button>
+                            </a>
+                        </div>
+                        <div class="btn-social">
+                            <a href="#">
+                                <button><i class="bi bi-linkedin"></i></button>
+                            </a>
+                            <a href="#">
+                                <button><i class="bi bi-github"></i></button>
                             </a>
                         </div>
                     </div><!--txt-topo-site-->
