--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
     <!-- Fim google fonts -->
+    <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!--Bootstrap Icons-->
     <link rel="stylesheet" href="style.css">
     <title>Portifolio</title>
 </head>
@@ -70,7 +72,7 @@
                 </div> <!--flex-->
             </div><!--interface-->
         </section> <!--topo-site-->
-    </main>
+        
         <section class="sobre">
             <div class="interface">
                 <div class="flex">
@@ -87,5 +89,76 @@
             </div> <!--interface-->
         </section> <!--sobre-->
 
+        <section class="habilidades">
+            <div class="interface">
+                <h2 class="titulo">Minhas <span>Habilidades.</span></h2>
+                <div class="flex">
+                    <div class="habilidades-box">
+                        <div class="box" key"0">
+                            <p>HTML5</p>
+                            <img src="assets/html.svg" alt="html">
+                        </div>
+                        <div class="box" key"1">
+                            <p>CSS3</p>
+                            <img src="assets/css3.svg" alt="css3">
+                        </div>
+                        <div class="box" key"2">
+                            <p>PYTHON</p>
+                            <img src="assets/python.svg" alt="python">
+                        </div>
+                        <div class="box" key"3">
+                            <p>DJANGO</p>
+                            <img src="assets/django.svg" alt="django">
+                        </div>
+                        <div class="box" key"4">
+                            <p>FLASK</p>
+                            <img src="assets/flask.svg" alt="flask">
+                        </div>
+                        <div class="box" key"5">
+                            <p>POSTGRESQL</p>
+                            <img src="assets/postgresql.svg" alt="postgresql">
+                        </div>
+                        <div class="box" key"6">
+                            <p>MYSQL</p>
+                            <img src="assets/mysql.svg" alt="mysql">
+                        </div>
+                        <div class="box" key"7">
+                            <p>BOOTSTRAP</p>
+                            <img src="assets/bootstrap.svg" alt="bootstrap">
+                        </div>
+                        <div class="box" key"8">
+                            <p>JAVASCRIPT</p>
+                            <img src="assets/javascript.svg" alt="javascript">
+                        </div>
+                        <div class="box" key"9">
+                            <p>JAVA</p>
+                            <img src="assets/java.svg" alt="java">
+                        </div>
+                        <div class="box" key"10">
+                            <p>FIGMA</p>
+                            <img src="assets/figma.svg" alt="figma">
+                        </div>
+                    </div><!--habilidades-box-->
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--habilidades-->
+
+        <section class="projetos">
+            <div class="interface">
+                <h2 class="titulo">Meus <span>Projetos.</span></h2>
+                <div class="flex">
+                    <div class="img-projetos">
+                        
+                    </div>
+                    <div class="img-projetos">
+
+                    </div>
+                    <div class="img-projetos">
+
+                    </div>
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--projetos-->
+    </main>
 </body>
 </html>
