--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <nav class="menu-desktop"><!--Menu para tornar responsivo-->
                 <ul>
                     <li><a href="#">Início</a></li>
-                    <li><a href="#">Sobre mim</a></li>
-                    <li><a href="#">Habilidades</a></li>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="">Sobre mim</a></li>
+                    <li><a href="">Habilidades</a></li>
+                    <li><a href="">Projetos</a></li>
                 </ul>
             </nav>
 
             <div class="btn-contato">
-                <a href="#">
+                <a href="">
                     <button>Contato</button>
                 </a>
             </div>
@@ -56,10 +56,10 @@
                             </a>
                         </div>
                         <div class="btn-social">
-                            <a href="#">
+                            <a href="https://www.linkedin.com/in/britojos/" target="_blank">
                                 <button><i class="bi bi-linkedin"></i></button>
                             </a>
-                            <a href="#">
+                            <a href="https://github.com/JoseBrittoo" target="_blank">
                                 <button><i class="bi bi-github"></i></button>
                             </a>
                         </div>
@@ -159,6 +159,50 @@
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--projetos-->
+
+        <section class="fomulario">
+            <div class="interface">
+                <h2 class="titulo">Entre em <span>Contato.</span></h2>
+                
+                <form action="">
+                    <input type="text" placeholder="Digite seu nome completo:" required>
+                    <input type="text" placeholder="Digite seu nome e-mail:" required>
+                    <input type="text" placeholder="Digite o assunto:" required>
+                   <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <div class="btn-enviar">
+                        <input type="submit" value="Enviar">
+                    </div>
+                </form>
+            </div><!--interface-->
+        </section><!--fomulario-->
     </main>
+
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="btn-social"> 
+                        <a href="https://www.linkedin.com/in/britojos/" target="_blank">
+                            <button>
+                                <i class="bi bi-linkedin"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/JoseBrittoo" target="_blank" >
+                            <button>
+                                <i class="bi bi-github"></i>
+                            </button>
+                        </a>
+                        <a href="mailto:brito7.jose@gmail.com">
+                            <button>
+                                <i class="bi bi-envelope-fill"></i>
+                            </button>
+                        </a>
+                    </div><!--btn-social-->
+                </div><!--flex-->
+            </div><!--line-footer-->
+            <p>© 2023 | José Brito</p>
+        </div><!--interface-->
+    </footer>
+
 </body>
 </html>
