ajustes em projetos

--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
             <div class="interface">
                 <h2 class="titulo">Meus <span>Projetos.</span></h2>
                 <div class="flex">
-                    <div class="img-projetos">
-                        
+                    <div class="img-projetos" style="background-image: url(images/josebrittoo.github.io_cafe_loja.png);">
+                        <div class="overlay">Projeto 1</div>
                     </div>
-                    <div class="img-projetos">
-
+                    <div class="img-projetos" style="background-image: url(images/josebrittoo.github.io_cafe_loja.png);">
+                        <div class="overlay">Projeto 2</div>
                     </div>
-                    <div class="img-projetos">
-
+                    <div class="img-projetos" style="background-image: url(images/josebrittoo.github.io_cafe_loja.png);">
+                        <div class="overlay">Projeto 3</div>
                     </div>
                 </div><!--flex-->
             </div><!--interface-->
