--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="img-projetos" style="background-image: url(images/josebrittoo.github.io_cafe_loja.png);">
                         <div class="overlay">Projeto 1</div>
                     </div>
-                    <div class="img-projetos" style="background-image: url(images/josebrittoo.github.io_cafe_loja.png);">
+                    <div class="img-projetos" style="background-image: url(images/josebrittoo.github.io_portfolio_.png);">
                         <div class="overlay">Projeto 2</div>
                     </div>
                     <div class="img-projetos" style="background-image: url(images/josebrittoo.github.io_cafe_loja.png);">
