--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="interface">
                 <h2 class="titulo">Entre em <span>Contato.</span></h2>
                 
-                <form action="https://formsubmit.co/brito7.jose@gmail.com" method="post">
+                <form action="https://formsubmit.co/brito7.jose@gmail.com" method="POST">
 
                     <input type="text" placeholder="Digite seu nome:" required>
                     <input type="text" placeholder="Digite seu nome e-mail:" required>
@@ -201,6 +201,7 @@
                     <input type="hidden" name="_subject" value="Novo Contato!">
                     <input type="text" name="_honey" style="display:none;">
                     <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
                 </form>
             </div><!--interface-->
         </section><!--fomulario-->
