--- a/index.html
+++ b/index.html
@@ -191,17 +191,16 @@
                 
                 <form action="https://formsubmit.co/brito7.jose@gmail.com" method="POST">
 
-                    <input type="text" placeholder="Digite seu nome:" required>
-                    <input type="text" placeholder="Digite seu nome e-mail:" required>
-                    <input type="text" placeholder="Digite o assunto:" required>
-                   <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <input type="text" name="name" placeholder="Digite seu nome:" required>
+                    <input type="text" name="email" placeholder="Digite seu nome e-mail:" required>
+                    <input type="text" name="subject" placeholder="Digite o assunto:" required>
+                   <textarea name="message" placeholder="Sua mensagem" required></textarea>
                     <div class="btn-enviar">
                         <input type="submit" value="Enviar">
                     </div>
                     <input type="hidden" name="_subject" value="Novo Contato!">
                     <input type="text" name="_honey" style="display:none;">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
                 </form>
             </div><!--interface-->
         </section><!--fomulario-->
