--- a/index.html
+++ b/index.html
@@ -195,9 +195,10 @@
                     <input type="text" name="email" placeholder="Digite seu nome e-mail:" required>
                     <input type="text" name="subject" placeholder="Digite o assunto:" required>
                    <textarea name="message" placeholder="Sua mensagem" required></textarea>
-                    <div class="btn-enviar">
+                   <button type="submit">enviar</button>
+                    <!-- <div class="btn-enviar">
                         <input type="submit" value="Enviar">
-                    </div>
+                    </div> -->
                     <input type="hidden" name="_subject" value="Novo Contato!">
                     <input type="text" name="_honey" style="display:none;">
                     <input type="hidden" name="_captcha" value="false">
