ajustes de contato

--- a/index.html
+++ b/index.html
@@ -196,14 +196,11 @@
                     <input type="text" name="subject" placeholder="Digite o assunto:" required>
                    <textarea name="message" placeholder="Sua mensagem" required></textarea>
                    <button type="submit">Enviar</button>
-                    <!-- <div class="btn-enviar">
-                        <input type="submit" value="Enviar">
-                    </div> -->
 
                     <input type="hidden" name="_subject" value="Novo Contato!">
                     <input type="text" name="_honey" style="display:none;">
                     <input type="hidden" name="_captcha" value="false">
-                    
+                    <input type="hidden" name="_next" value="sucess.html">
                 </form>
             </div><!--interface-->
         </section><!--fomulario-->
