Efeito no Cursor

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="interface">
                 <h2 class="titulo">Entre em <span>Contato.</span></h2>
                 
-                <form action="https://formsubmit.co/brito7.jose@email.com" method="POST">
+                <form action="https://formsubmit.co/brito7.jose@gmail.com" method="POST">
                     
                     <input type="text" name="name" placeholder="Digite seu nome:" required>
                     <input type="text" name="email" placeholder="Digite seu nome e-mail:" required>
