--- a/sucesso.html
+++ b/sucesso.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Email enviado com sucesso!</p>
-    <a href="https://josebrittoo.github.io/portfolio/index.html">voltar</a>
+    <a href="https://josebrittoo.github.io/portfolio/">voltar</a>
 </body>
 </html>
