--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
             <nav class="menu-desktop"><!--Menu para tornar responsivo-->
                 <ul>
-                    <li><a href="#">Início</a></li>
+                    <li><a href="">Início</a></li>
                     <li><a href="#sobre">Sobre mim</a></li>
                     <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="#projetos">Projetos</a></li>
