ajustes de menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a href="">Início</a></li>
                     <li><a href="#sobre">Sobre mim</a></li>
                     <li><a href="#habilidades">Habilidades</a></li>
-                    <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#line-footer">Projetos</a></li>
                 </ul>
             </nav>
 
@@ -58,7 +58,7 @@
                         <li><a href="#sobre">Sobre mim</a></li>
                         <li><a href="#habilidades">Habilidades</a></li>
                         <li><a href="#projetos">Projetos</a></li>
-                        <li><a href="#formulario">Contato</a></li>
+                        <li><a href="#line-footer">Contato</a></li>
                     </ul>
                 </nav>
 
