ajuste no background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link type="image/png" rel="icon" href="/assets/images/favicon.png">
 </head>
 <body>
-    
+
     <header id="header">
         <div class="interface"><!--para limitar as laterias do site-->
             <div class="logo">
@@ -64,7 +64,6 @@
 
             </div><!--menu-mobile--> 
             <div class="overlay-menu" id="overlay-menu"></div>
-
         </div><!--interface-->
     </header>
     
@@ -77,7 +76,7 @@
 
                         <p>Estou em busca de mudar o meu mundo e das pessoas que amo.</p>
                         <div class="btn-contato">
-                            <a href="https://drive.google.com/file/d/1vDBgOi7ratOSYhlHW-523etjrHf8lMW1/view?usp=sharing" target="_blank">
+                            <a href="https://drive.google.com/file/d/1zF48uPTfJT029y1qjOokGPi4SvvO_Vuf/view?usp=sharing" target="_blank">
                                 <button>Dowload CV</button>
                             </a>
                         </div>
@@ -215,9 +214,15 @@
                     </div><!--btn-social-->
                 </div><!--flex-->
             </div><!--line-footer-->
+            <p>&#127987;&#65039;&#8205;&#127752;</p>
             <p>© 2023 | José Brito</p>
         </div><!--interface-->
     </footer>
+
+    <!-- Vídeo de fundo -->
+    <video id="video-bg" class="video-bg" autoplay muted loop play-inline>
+        <source src="/assets/images/background2.mp4" type="video/mp4">
+    </video>
 
     <div class="circle"></div>
     <div class="circle"></div>
