--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                             <img src="/assets/images/postgresql.svg" alt="postgresql">
                         </div>
                         <div class="box" key"6">
-                            <p>MYSQL</p>
-                            <img src="/assets/images/mysql.svg" alt="mysql">
+                            <p>TAILWIND</p>
+                            <img src="/assets/images/tailwind.svg" alt="tailwind">
                         </div>
                         <div class="box" key"7">
                             <p>BOOTSTRAP</p>
@@ -163,6 +163,10 @@
                         <div class="box" key"10">
                             <p>FIGMA</p>
                             <img src="/assets/images/figma.svg" alt="figma">
+                        </div>
+                        <div class="box" key"11">
+                            <p>REACT</p>
+                            <img src="/assets/images/react-.svg" alt="react">
                         </div>
                     </div><!--habilidades-box-->
                 </div><!--flex-->
