--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="/assets/images/eu_topo.png" alt="eu">
+                        <img src="/assets/images/eu.png" alt="eu">
                     </div>
                     <div class="txt-sobre">
                         <h1>Um pouco sobre mim</h1>
@@ -270,7 +270,7 @@
                 </div><!--flex-->
             </div><!--line-footer-->
             <p>&#127987;&#65039;&#8205;&#127752;</p>
-            <p>© 2023 | José Brito</p>
+            <p>© 2025 | José Brito</p>
         </div><!--interface-->
     </footer>
 
